fixed responsive issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,14 @@
 
 html {
 	scroll-behavior: smooth;
+	word-break: break-word;
+	overflow: auto;
 }
 
 body {
 	font-family: 'Roboto', sans-serif;
     margin:0;
-    padding:0;
+	padding:0;
     background-color: #f6f6f6;
 }
 
@@ -46,7 +48,6 @@ h2{
 	text-decoration: none;
 }
 
-
 /* font awesome */
 i{
 	padding: 5px;
@@ -54,7 +55,6 @@ i{
 
 /* navigation */
 nav {
-	position: relative;
 	background: #FFFFFF;
 	font-family: 'Roboto', sans-serif;
 	background-color: #FFFFFF;
@@ -62,8 +62,6 @@ nav {
 	font-size: 16px;
 	padding-top: 1%;
 	padding-bottom: 1%;
-    border-bottom:1px solid #e7e7e7;
-	z-index: 10;
 }
 
 nav ul {
@@ -130,27 +128,37 @@ nav ul li a:hover:after {
 
 /* header */
 
-
-.header .info {
-	font-family: 'Roboto', sans-serif;
-	display: block;
-	color: white;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	  
+.header {
+	background-image: url(../img/header.jpg);
+	background-size: cover;
+	padding: 10em 0;
 }
 
-.header {
-	width: 100%;
+.header .info {
 	display: block;
-	position: relative;
+	color: white;
+	width: 90%;
+	margin: 0 auto;
+}
+
+.info h1 {
+	font-size: 60px; 
+	padding-bottom: 2%; 
+	font-family: 'Yantramanav', sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+}
+
+.info p {
+	font-size: 18px;
+	padding-bottom: 8%;
+	font-family: "Raleway";
+	word-break: break-word;
 }
 
 .header .button {
-	font-family: "Roboto";
-	padding: 3% 5%;
+	font-family: "Yantramanav";
+	padding: 2%;
 	color: white;
 	font-size: 20px;
 	border: 2px solid white;
@@ -199,7 +207,6 @@ nav ul li a:hover:after {
 	flex-wrap: wrap;
 }
 
-
 #portfolio h5 {
 	font-size: 13px;
 	color: gray;
@@ -220,7 +227,6 @@ nav ul li a:hover:after {
 .about {
 	padding-top: 3%;
 	padding-bottom: 3%;
-	border-bottom: 1px solid #e7e7e7;
 	font-family: "Raleway";
 }
 
@@ -287,7 +293,7 @@ nav ul li a:hover:after {
 }
 
 .footer p {
-	font-family: "Raleway"
+	font-family: "Raleway";
 }
 
 .footer a {
